  plot the wind direction as well (suggested by Scott <ssshoema@gmail.com>).
- Added -r and -R options to the nbspmtrplot1 script.
- Text files are filetered through tr in the rstfilter to delete cntrl chars.
- Added -e to nbspsat and nbspsatinfo (to extract the lat-lon parameters).
- Added option(s) to set servername to the wildcard address(es).
- Added "digatmos" as default subdir for the catalog extension
  if no suubdir is specified in the /_catalog url.
- Fixed syntax error in filters.lib when processing the new rad files
  (nbspradinfo -> exec nbspradinfo). As a result of the error, the
  rc(rad...) variables were not being properly set for the new files.
  Some of the variables are used in the info files of the gisfilter
  shapefiles.
- Added the gisfilter.
- Added "gis" subdir to the catalog extension - The nids files are
  saved with the WCT naming conventions.
- Completed the gini to shapefile conversion in the nbspgis library.
- Added gini to asc conversion to the nbspgis librray.

2.1.3p5
-
- Eliminated setting of usprcvsize in linux (to enable autotuning) - instead
  output a message at package installation regerding the setting of
  sysctl -w net.ipv4.ipfrag_max_dist=0
- Added kgge to metarfilter (icao and st files)
- Added linespoints style (ls) keywords to gnuplot templates in metarfilter
- Revised nbspstatcounters to output stats data in various formats (std, xml,
  csv, csvk) for use locally by e.g., collectd, rrdtool, npstats.
- Added inbsp extension for exporting nbspstatcounters data via web interface
  (for use remotely in, e.g., collectd, rrdtool, npstats)
- Added nbspreconfigure script
- Added nbspstats script
- Revised msgfilter: convert crlf -> nl, corrected README, added options
  for smtp when needed.
- Added output of logperiods (for stats and qstate) in nbspstatcounters
  and in the "_inbsp/stats" web interface. The script nbspstats was revised
  to accept a "-p <logperiod>" option.